--- a/climate_starter.ipynb
+++ b/climate_starter.ipynb
@@ -516,7 +516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1810,7 +1810,13 @@
       "2017-01-19 0.0\n",
       "2017-01-19 None\n",
       "2017-01-19 0.0\n",
-      "2017-01-19 0.02\n",
+      "2017-01-19 0.02\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "2017-01-19 0.0\n",
       "2017-01-18 0.0\n",
       "2017-01-18 0.0\n",
@@ -1967,13 +1973,7 @@
       "2016-12-24 0.14\n",
       "2016-12-24 0.13\n",
       "2016-12-24 0.06\n",
-      "2016-12-24 0.2\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "2016-12-24 0.2\n",
       "2016-12-24 1.08\n",
       "2016-12-23 0.01\n",
       "2016-12-23 0.1\n",
@@ -2959,24 +2959,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "9"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "stations = 9\n"
+     ]
     }
    ],
    "source": [
     "# Design a query to calculate the total number stations in the dataset\n",
     "count_stations = session.query(Station.station).count()\n",
-    "count_stations"
+    "print(f\"stations = {count_stations}\")"
    ]
   },
   {
@@ -3123,24 +3120,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "[(54.0, 85.0, 71.66378066378067)]"
-      ]
-     },
-     "execution_count": 33,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "min, max, avg = [(54.0, 85.0, 71.66378066378067)]\n"
+     ]
     }
    ],
    "source": [
     "# Using the most active station id from the previous query, calculate the lowest, highest, and average temperature.\n",
     "temp_results = session.query(func.min(Measurement.tobs),func.max(Measurement.tobs),func.avg(Measurement.tobs)).filter(Measurement.station == 'USC00519281').all()\n",
-    "temp_results"
+    "temp_results\n",
+    "print(f\"min, max, avg = {temp_results}\")"
    ]
   },
   {
